# advent_of_code_2024

./: .gitignore  Cargo.toml  pyproject.toml
day08/: day8.sql
day10/: twenty.py
day12/: twentythree.py
day16/: thirtyone.py
day18/: thirtyfive.py
day19/: thirtyseven.py
day20/: thirtynine.py
day21/: fortyone.py
day24/: fortyseven.py
src/: advent_24_01.rs  advent_24_02.rs  advent_24_03.rs  advent_24_04.rs  advent_24_05.rs  advent_24_06.rs  advent_24_07.rs  advent_24_08.rs  advent_24_09.rs  advent_24_10.rs  advent_24_11.rs  advent_24_12.rs  advent_24_13.rs  advent_24_14.rs  advent_24_15.rs  advent_24_16.rs  advent_24_17.rs  advent_24_18.rs  advent_24_19.rs  advent_24_20.rs  advent_24_21.rs  advent_24_22.rs  advent_24_23.rs  advent_24_24.rs  advent_24_25.rs  lib.rs
