[package]
name = "aoc24"
version = "0.1.0"
edition = "2024"

# For profiling, but it uses DTrace on mac, which requires root access
# [profile.release]
# debug = true

# RUSTFLAGS="-Clink-arg=-Wl,--compress-debug-sections=zlib"
# compresses the debuginfo and makes release binary smaller

[profile.dist]
inherits = "release"
lto = "thin"
codegen-units = 1

[dependencies]
aoc_lib = { git = "https://github.com/antivirak/aoc-lib.git" }
dashmap = "6.1.0"
indicatif = { version = "0.17.9", features = ["rayon"] }
rayon = "1.10.0"
regex = "1.11.1"
